<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ecycle Books</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_user_info">Account Information</string>
    <string name="title_activity_sell_book">Sell Books</string>
    <string name="title_activity_need_book">Get Books</string>
    <string name="title_activity_list_books">Book List</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_choose_book">Choose Book</string>
    <string name="title_activity_donate_book">Donate Books</string> 
    <string name="addnew">Add New</string> 
    
    <string name="action_signin">Sign In</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_logout">Logout</string>
    <string name="action_navigate1">Sell Book</string>
    <string name="action_navigate2">Donate Book</string>
    
    <string name="add_book_bname">Enter Book Name</string>
    <string name="add_book_author">Enter Author</string>
    <string name="add_book_publication">Enter Publication</string>
    <string name="add_book_submit">Add Book</string>
    <string name="add_book_edition">Enter Edition</string>
    <string name="add_book_mrp">Enter MRP</string>
    <string name="add_book_price">Enter Price</string>  
    <string name="list_book_sr">Sr. No.</string>
    <string name="list_book_city">City</string>
    <string name="list_book_edition">Edition</string>
    <string name="list_book_price">Price</string>
    <string name="list_book_mrp">MRP</string>
    <string name="list_book_booktype">Book Type</string>
    <string name="list_book_college">College</string>
    
    <string name="list_book_bname">Book Name</string>
    <string name="list_book_author">Author</string>
    <string name="info_book_name">Enter Your Name</string>
    <string name="info_book_pass">Enter Password</string>
    <string name="info_book_cpass">Confirm Password</string>
    <string name="info_book_contact">Enter Contact Number</string>
    <string name="info_book_city">Enter City</string>
    <string name="info_book_optional">Optional:s</string>
    <string name="info_book_empty">Field Empty</string>    
    <string name="info_book_Location">Enter College/Organization</string>
    <string name="choose_book_search">Search</string>
    <string name="choose_book_notfound">Not Found Yours?</string>
    <string name="need_book_contact">Contact No</string>
    <string name="need_book_mail">Email id</string>
    <string name="signin_book_mail">Enter E-mail Address</string>
    <string name="signin_book_pass">Enter Password</string>
    
    <string name="main_book_button1">Sell a Book</string>
    <string name="main_book_button2">Donate a Book</string>
    <string name="main_book_button3">Need a Book</string>
    <string name="donate_book_submit">Donate Book</string>
    <string name="sell_book_submit">Sell Book</string>
    <string name="signin_book_submit">Sign In</string>
    <string name="signup_book_submit">Sign Up</string>
    <string name="info_book_submit">Submit</string>   

    <string name="info_book_heading">Account Information</string>
    <string name="need_book_heading">Seller Contact</string>
    <string name="signin_book_heading">Login</string>
    <string name="signup_book_heading">Sign Up</string>
     
    <string name="choose_book_content_description">Add Book Button</string>
    <string name="pager_book_content_description">Slider Images</string>
    <string name="list_book_content_description">Description Arrow</string>
    
</resources>
