<!-- Using Same action Bar for all activities -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aekanshkansal.ecyclebooks.MainActivity">-->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	
    <item 
        android:id="@+id/action_signin"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_signin"
        />
    <item 
        android:id="@+id/action_signup"
        android:orderInCategory="11"
        android:showAsAction="ifRoom"
        android:title="@string/action_signup"
        />
    <item 
        android:id="@+id/action_logout"
        android:orderInCategory="12"
        android:showAsAction="ifRoom"
        android:title="@string/action_logout"
        />    
</menu>
