<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/backg33"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aekanshkansal.ecyclebooks.SignInActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signin_book_heading" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:maxLength="150"
        android:hint="@string/signin_book_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:maxLength="50"
        android:hint="@string/signin_book_pass"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/signin_book_submit" />
    
</LinearLayout>
</ScrollView>