<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backg33"
    tools:context="com.aekanshkansal.ecyclebooks.DonateBookActivity" >
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <EditText
        android:id="@+id/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:cursorVisible="false"
        android:clickable="false"
        android:focusable="false"
		android:maxLength="150"
        android:hint="@string/add_book_bname"
        android:inputType="none" />

    <EditText
        android:id="@+id/EditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/EditText1"
        android:layout_below="@+id/EditText1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:maxLength="100"
        android:cursorVisible="false"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/add_book_author"
        android:inputType="none" >
        <requestFocus />    
    </EditText>

    <EditText
        android:id="@+id/EditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/EditText2"
        android:layout_below="@+id/EditText2"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:maxLength="50"
        android:cursorVisible="false"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/add_book_publication"
        android:inputType="none"
		/>
    
    <EditText
        android:id="@+id/EditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/EditText3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:maxLength="4"
        android:hint="@string/add_book_edition"
        android:inputType="number" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/EditText4"
        android:layout_below="@+id/EditText4"
        android:layout_marginTop="25dp"
        android:text="@string/donate_book_submit" />
    
    
</RelativeLayout>
</ScrollView>