<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/backg33"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aekanshkansal.ecyclebooks.SignUpActivity">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/signup_book_heading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:maxLength="150"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/signin_book_mail"
        android:inputType="textEmailAddress" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/signup_book_submit" />

</RelativeLayout>
</ScrollView>